--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "resend": "^2.0.0",
     "sass": "^1.68.0"
   },
   "devDependencies": {
