Fix a spelling error in the github workflow file

--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -40,5 +40,5 @@ jobs:
         run: npm ci 
       - name: Run job
         run: npm run ${{ matrix.job }}
-    needs: avoid_reduncy 
+    needs: avoid_redundancy 
       
