--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -7,6 +7,7 @@ on:
     branches: [main]
     types: [opened, synchronize]
 
+
 jobs:
   avoid_redundancy:
     runs-on: ubuntu-latest
@@ -23,11 +24,9 @@ jobs:
         with: 
           access_token: ${{ github.token  }}
 
-  setup:
+
+  setup: 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        job: ['install', 'lint', 'build']
     steps:
       - uses: actions/checkout@v2
         with:
@@ -38,7 +37,38 @@ jobs:
           node-version: 20
       - name: Install dependencies
         run: npm ci 
-      - name: Run job
-        run: npm run ${{ matrix.job }}
-    needs: avoid_redundancy 
+
+
+  lint:
+    needs: [install]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          cache: 'npm'
+          node-version: 20 
+      - name: Install dependencies
+        run: npm ci 
+      - name: Run Lint
+        run: npm run lint 
+        
+
+  build: 
+    needs: [install]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          cache: 'npm'
+          node-version: 20 
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build  
       
