--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -25,7 +25,7 @@ jobs:
           access_token: ${{ github.token  }}
 
 
-  setup: 
+  install: 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
